# gstreamer_tutorials

./: CMakeLists.txt  basic-tutorial-1.cpp  basic-tutorial-2.cpp  basic-tutorial-3.cpp  basic-tutorial-4.cpp  rtsp-server-test.cpp
cmakemodules/: FindGLIB.cmake  FindGObject.cmake  FindGStreamer.cmake  MacroFindGStreamerLibrary.cmake
task1/: CMakeLists.txt
